--- a/src/competencia/experimento/setup.ipynb
+++ b/src/competencia/experimento/setup.ipynb
@@ -2,129 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "805be786-8a8e-45c6-8b43-2594400a84e8",
    "metadata": {},
    "outputs": [],
    "source": [
     "source(\"/home/vickydiliscia/dmeyf2025/src/competencia/experimento/config.r\")\n",
     "source(PATH_UTILS)\n",
-    "load_utils(\"/home/vickydiliscia/dmeyf2025/src/competencia/experimento/utils\")"
+    "load_utils(\"/home/vickydiliscia/dmeyf2025/src/competencia/experimento/utils\")\n",
+    "source(\"/home/vickydiliscia/dmeyf2025/src/competencia/experimento/utils/01_clase_ternaria.R\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "4856ac7c-f48c-489e-8fba-a07d29b312a4",
+   "execution_count": null,
+   "id": "cff7a347-e3d4-4ac4-a6b6-b8ac4f379d76",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A data.table: 15 × 3</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>foto_mes</th><th scope=col>clase_ternaria</th><th scope=col>N</th></tr>\n",
-       "\t<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>202101</td><td>BAJA+1  </td><td>   622</td></tr>\n",
-       "\t<tr><td>202101</td><td>BAJA+2  </td><td>   825</td></tr>\n",
-       "\t<tr><td>202101</td><td>CONTINUA</td><td>160080</td></tr>\n",
-       "\t<tr><td>202102</td><td>BAJA+1  </td><td>   831</td></tr>\n",
-       "\t<tr><td>202102</td><td>BAJA+2  </td><td>  1032</td></tr>\n",
-       "\t<tr><td>202102</td><td>CONTINUA</td><td>160292</td></tr>\n",
-       "\t<tr><td>202103</td><td>BAJA+1  </td><td>  1039</td></tr>\n",
-       "\t<tr><td>202103</td><td>BAJA+2  </td><td>   951</td></tr>\n",
-       "\t<tr><td>202103</td><td>CONTINUA</td><td>161119</td></tr>\n",
-       "\t<tr><td>202104</td><td>BAJA+1  </td><td>   955</td></tr>\n",
-       "\t<tr><td>202104</td><td>BAJA+2  </td><td>  1130</td></tr>\n",
-       "\t<tr><td>202104</td><td>CONTINUA</td><td>161333</td></tr>\n",
-       "\t<tr><td>202105</td><td>NA      </td><td>162783</td></tr>\n",
-       "\t<tr><td>202105</td><td>BAJA+1  </td><td>  1134</td></tr>\n",
-       "\t<tr><td>202106</td><td>NA      </td><td>164313</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A data.table: 15 × 3\n",
-       "\\begin{tabular}{lll}\n",
-       " foto\\_mes & clase\\_ternaria & N\\\\\n",
-       " <int> & <chr> & <int>\\\\\n",
-       "\\hline\n",
-       "\t 202101 & BAJA+1   &    622\\\\\n",
-       "\t 202101 & BAJA+2   &    825\\\\\n",
-       "\t 202101 & CONTINUA & 160080\\\\\n",
-       "\t 202102 & BAJA+1   &    831\\\\\n",
-       "\t 202102 & BAJA+2   &   1032\\\\\n",
-       "\t 202102 & CONTINUA & 160292\\\\\n",
-       "\t 202103 & BAJA+1   &   1039\\\\\n",
-       "\t 202103 & BAJA+2   &    951\\\\\n",
-       "\t 202103 & CONTINUA & 161119\\\\\n",
-       "\t 202104 & BAJA+1   &    955\\\\\n",
-       "\t 202104 & BAJA+2   &   1130\\\\\n",
-       "\t 202104 & CONTINUA & 161333\\\\\n",
-       "\t 202105 & NA       & 162783\\\\\n",
-       "\t 202105 & BAJA+1   &   1134\\\\\n",
-       "\t 202106 & NA       & 164313\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A data.table: 15 × 3\n",
-       "\n",
-       "| foto_mes &lt;int&gt; | clase_ternaria &lt;chr&gt; | N &lt;int&gt; |\n",
-       "|---|---|---|\n",
-       "| 202101 | BAJA+1   |    622 |\n",
-       "| 202101 | BAJA+2   |    825 |\n",
-       "| 202101 | CONTINUA | 160080 |\n",
-       "| 202102 | BAJA+1   |    831 |\n",
-       "| 202102 | BAJA+2   |   1032 |\n",
-       "| 202102 | CONTINUA | 160292 |\n",
-       "| 202103 | BAJA+1   |   1039 |\n",
-       "| 202103 | BAJA+2   |    951 |\n",
-       "| 202103 | CONTINUA | 161119 |\n",
-       "| 202104 | BAJA+1   |    955 |\n",
-       "| 202104 | BAJA+2   |   1130 |\n",
-       "| 202104 | CONTINUA | 161333 |\n",
-       "| 202105 | NA       | 162783 |\n",
-       "| 202105 | BAJA+1   |   1134 |\n",
-       "| 202106 | NA       | 164313 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "   foto_mes clase_ternaria N     \n",
-       "1  202101   BAJA+1            622\n",
-       "2  202101   BAJA+2            825\n",
-       "3  202101   CONTINUA       160080\n",
-       "4  202102   BAJA+1            831\n",
-       "5  202102   BAJA+2           1032\n",
-       "6  202102   CONTINUA       160292\n",
-       "7  202103   BAJA+1           1039\n",
-       "8  202103   BAJA+2            951\n",
-       "9  202103   CONTINUA       161119\n",
-       "10 202104   BAJA+1            955\n",
-       "11 202104   BAJA+2           1130\n",
-       "12 202104   CONTINUA       161333\n",
-       "13 202105   NA             162783\n",
-       "14 202105   BAJA+1           1134\n",
-       "15 202106   NA             164313"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "require( \"data.table\" )\n",
     "\n",
-    "source(\"/home/vickydiliscia/dmeyf2025/src/competencia/experimento/utils/01_clase_ternaria.R\")\n",
-    "\n",
     "# leo el dataset\n",
-    "dataset <- fread(DATASET_CRUDO)\n",
-    "\n",
+    "dataset <- fread(DATASET_CRUDO)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c1b50f8-c315-4681-bbc5-e66a85e36e1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Calculo clase_ternaria\n",
-    "\n",
     "dataset <- agregar_clase_ternaria(dataset)\n",
     "\n",
     "# pego el resultado en el dataset original y grabo\n",
@@ -135,12 +44,28 @@
     "  dataset,\n",
     "  file = file.path(PATH_DATASETS, \"competencia_01.csv.gz\"),\n",
     "  sep = \",\"\n",
-    ")\n",
-    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "790fd2e3-f931-4905-b0b9-ec7d6c3657ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Resumen clase_ternaria\n",
     "setorder( dataset, foto_mes, clase_ternaria, numero_de_cliente)\n",
     "dataset[, .N, list(foto_mes, clase_ternaria)]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c77407a-5b98-4bfe-a132-52ac8e57e497",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
