fix: corregir para que tome la base de datos con el feat eng

--- a/src/competencia/experimento/preprocess.ipynb
+++ b/src/competencia/experimento/preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "615aa3ae-7e78-4c9b-9ac4-f633c4982ab7",
    "metadata": {},
    "outputs": [],
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "53871622-8978-400b-ad8e-fc044562e7fd",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "401ba2de-d27b-4bf0-8c4d-a28e69082800",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "97217cda-bd1a-49db-8530-935deb8d6591",
    "metadata": {},
    "outputs": [],
@@ -389,13 +389,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "5e2d0f3c-3da0-48cb-ae4d-eb860951ff7f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# lectura del dataset\n",
-    "dataset <- fread(\"/content/datasets/competencia_01.csv.gz\", stringsAsFactors= TRUE)"
+    "dataset <- fread(DATASET_FEATURES, stringsAsFactors= TRUE)"
    ]
   },
   {
@@ -518,11 +518,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2faa0e5-5bb9-43f5-b914-ec8600243ee7",
+   "cell_type": "markdown",
+   "id": "0f92e601-0c5a-436d-a1e3-c1f4fdcd1669",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Configuracion Bayesian Optimization"
    ]
@@ -616,11 +614,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "afae9422-ad96-43ec-8724-7cae7acf9918",
+   "cell_type": "markdown",
+   "id": "730bc335-b026-4c21-980e-c744d86c8bc7",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Correr optimizacion"
    ]
