fix: typo hyperparametertuning

--- a/src/competencia/experimento/preprocess.ipynb
+++ b/src/competencia/experimento/preprocess.ipynb
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 50,
    "id": "1caf7b66-2c0e-4bf2-b11a-4349a1f5552e",
    "metadata": {},
    "outputs": [],
@@ -280,13 +280,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "id": "268da04e-e6af-4c5b-a5bf-69d06a71aa24",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Aqui se cargan los bordes de los hiperparametros de la BO\n",
-    "PARAM$hypeparametertuning$hs <- makeParamSet(\n",
+    "PARAM$hyperparametertuning$hs <- makeParamSet(\n",
     "  makeIntegerParam(\"num_iterations\", lower= 8L, upper= 2048L),\n",
     "  makeNumericParam(\"learning_rate\", lower= 0.01, upper= 0.3),\n",
     "  makeNumericParam(\"feature_fraction\", lower= 0.1, upper= 1.0),\n",
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "id": "5a4dba30-cdbe-40dc-a456-8db93245541a",
    "metadata": {},
    "outputs": [],
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "5e2d0f3c-3da0-48cb-ae4d-eb860951ff7f",
    "metadata": {},
    "outputs": [],
@@ -400,7 +400,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
+   "id": "51f29d66-b711-42a4-b58f-eed066393c0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.table: 3 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>foto_mes</th><th scope=col>clase_ternaria</th><th scope=col>N</th></tr>\n",
+       "\t<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>202102</td><td>BAJA+1  </td><td>   831</td></tr>\n",
+       "\t<tr><td>202102</td><td>BAJA+2  </td><td>  1032</td></tr>\n",
+       "\t<tr><td>202102</td><td>CONTINUA</td><td>160292</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.table: 3 × 3\n",
+       "\\begin{tabular}{lll}\n",
+       " foto\\_mes & clase\\_ternaria & N\\\\\n",
+       " <int> & <fct> & <int>\\\\\n",
+       "\\hline\n",
+       "\t 202102 & BAJA+1   &    831\\\\\n",
+       "\t 202102 & BAJA+2   &   1032\\\\\n",
+       "\t 202102 & CONTINUA & 160292\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.table: 3 × 3\n",
+       "\n",
+       "| foto_mes &lt;int&gt; | clase_ternaria &lt;fct&gt; | N &lt;int&gt; |\n",
+       "|---|---|---|\n",
+       "| 202102 | BAJA+1   |    831 |\n",
+       "| 202102 | BAJA+2   |   1032 |\n",
+       "| 202102 | CONTINUA | 160292 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  foto_mes clase_ternaria N     \n",
+       "1 202102   BAJA+1            831\n",
+       "2 202102   BAJA+2           1032\n",
+       "3 202102   CONTINUA       160292"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Resumen clase_ternaria\n",
+    "setorder( dataset, foto_mes, clase_ternaria, numero_de_cliente)\n",
+    "dataset_train[, .N, list(foto_mes, clase_ternaria)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "a40c68af-d4ab-4d3c-a605-8588a758c490",
    "metadata": {},
    "outputs": [],
@@ -410,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "id": "ba3dda77-d905-47ff-ac31-a7638bbf59cf",
    "metadata": {},
    "outputs": [],
@@ -426,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "id": "777fc482-c32f-460e-aea6-265ca2c19072",
    "metadata": {},
    "outputs": [],
@@ -448,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "id": "28e94ca8-6903-4f5f-9798-15ddf7cdb48b",
    "metadata": {},
    "outputs": [],
@@ -463,23 +524,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "id": "4fb1b0e3-c817-43fd-b75f-1545f8a15194",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "49863"
+       "49844"
       ],
       "text/latex": [
-       "49863"
+       "49844"
       ],
       "text/markdown": [
-       "49863"
+       "49844"
       ],
       "text/plain": [
-       "[1] 49863"
+       "[1] 49844"
       ]
      },
      "metadata": {},
@@ -488,16 +549,16 @@
     {
      "data": {
       "text/html": [
-       "154"
+       "458"
       ],
       "text/latex": [
-       "154"
+       "458"
       ],
       "text/markdown": [
-       "154"
+       "458"
       ],
       "text/plain": [
-       "[1] 154"
+       "[1] 458"
       ]
      },
      "metadata": {},
@@ -527,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "id": "39aa0db6-04fb-414b-bf67-f885046411e1",
    "metadata": {},
    "outputs": [],
@@ -563,10 +624,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "id": "56991c0e-bfac-4949-852a-cfad203469a8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in setMBOControlTermination(ctrl, iters = PARAM$hyperparametertuning$iteraciones): You need to specify a maximal number of iteration, a time budget or at least\n      one custom termination condition, but you provided neither.\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in setMBOControlTermination(ctrl, iters = PARAM$hyperparametertuning$iteraciones): You need to specify a maximal number of iteration, a time budget or at least\n      one custom termination condition, but you provided neither.\nTraceback:\n",
+      "1. stopf(\"You need to specify a maximal number of iteration, a time budget or at least\\n      one custom termination condition, but you provided neither.\")",
+      "2. stop(obj)"
+     ]
+    }
+   ],
    "source": [
     "# Aqui comienza la configuracion de la Bayesian Optimization\n",
     "\n",
@@ -584,7 +656,7 @@
     "  fn= funcion_optimizar, # la funcion que voy a maximizar\n",
     "  minimize= FALSE, # estoy Maximizando la ganancia\n",
     "  noisy= TRUE,\n",
-    "  par.set= PARAM$hypeparametertuning$hs, # definido al comienzo del programa\n",
+    "  par.set= PARAM$hyperparametertuning$hs, # definido al comienzo del programa\n",
     "  has.simple.signature= FALSE # paso los parametros en una lista\n",
     ")\n",
     "\n",
