feat: crear funcion para entrenar muchos modelos

--- a/src/competencia/experimento/train.ipynb
+++ b/src/competencia/experimento/train.ipynb
@@ -10,11 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "30958176-d114-4d55-be59-bf5d44a41923",
    "metadata": {},
    "outputs": [],
    "source": [
+    "source(\"/home/vickydiliscia/dmeyf2025/src/competencia/experimento/config.r\")\n",
+    "source(\"/home/vickydiliscia/dmeyf2025/src/competencia/experimento/utils/04_entrenar_modelos.R\")\n",
+    "source(\"/home/vickydiliscia/dmeyf2025/src/competencia/experimento/utils/05_ensamblar_promedio.R\")\n",
     "source(\"/home/vickydiliscia/dmeyf2025/src/competencia/experimento/config.r\")\n",
     "\n",
     "## Semillas\n",
@@ -36,6 +39,63 @@
     "experimento_folder <- paste0(\"HT\", PARAM$experimento)\n",
     "dir.create(experimento_folder, showWarnings=FALSE)\n",
     "setwd( paste0(\"/content/buckets/b1/exp/\", experimento_folder ))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "633c0d7b-0d92-4865-b0e5-ea4476e4bc87",
+   "metadata": {},
+   "source": [
+    "# Parametros LGBM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "76e912d0-da53-499c-8e1e-d45964ba0f1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PARAM$hyperparametertuning$xval_folds <- 5\n",
+    "\n",
+    "# parametros fijos del LightGBM que se pisaran con la parte variable de la BO\n",
+    "PARAM$lgbm$param_fijos <-  list(\n",
+    "  boosting= \"gbdt\", # puede ir  dart  , ni pruebe random_forest\n",
+    "  objective= \"binary\",\n",
+    "  metric= \"auc\",\n",
+    "  first_metric_only= FALSE,\n",
+    "  boost_from_average= TRUE,\n",
+    "  feature_pre_filter= FALSE,\n",
+    "  force_row_wise= TRUE, # para reducir warnings\n",
+    "  verbosity= -100,\n",
+    "\n",
+    "  seed= PARAM$semilla_primigenia,\n",
+    "\n",
+    "  max_depth= -1L, # -1 significa no limitar,  por ahora lo dejo fijo\n",
+    "  min_gain_to_split= 0, # min_gain_to_split >= 0\n",
+    "  min_sum_hessian_in_leaf= 0.001, #  min_sum_hessian_in_leaf >= 0.0\n",
+    "  lambda_l1= 0.0, # lambda_l1 >= 0.0\n",
+    "  lambda_l2= 0.0, # lambda_l2 >= 0.0\n",
+    "  max_bin= 31L, # lo debo dejar fijo, no participa de la BO\n",
+    "\n",
+    "  bagging_fraction= 1.0, # 0.0 < bagging_fraction <= 1.0\n",
+    "  pos_bagging_fraction= 1.0, # 0.0 < pos_bagging_fraction <= 1.0\n",
+    "  neg_bagging_fraction= 1.0, # 0.0 < neg_bagging_fraction <= 1.0\n",
+    "  is_unbalance= FALSE, #\n",
+    "  scale_pos_weight= 1.0, # scale_pos_weight > 0.0\n",
+    "\n",
+    "  drop_rate= 0.1, # 0.0 < neg_bagging_fraction <= 1.0\n",
+    "  max_drop= 50, # <=0 means no limit\n",
+    "  skip_drop= 0.5, # 0.0 <= skip_drop <= 1.0\n",
+    "\n",
+    "  extra_trees= FALSE,\n",
+    "\n",
+    "  num_iterations= 1200,\n",
+    "  learning_rate= 0.02,\n",
+    "  feature_fraction= 0.5,\n",
+    "  num_leaves= 750,\n",
+    "  min_data_in_leaf= 5000\n",
+    ")"
    ]
   },
   {
@@ -83,18 +143,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51de5ef0-cdce-4acb-aed8-5f3b67ada345",
+   "cell_type": "markdown",
+   "id": "c3b9adf2-fde7-4f59-bb43-a59f728ef376",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "0b821dd1-2be4-46e9-bf3f-8f60f486660a",
    "metadata": {},
    "outputs": [],
@@ -104,21 +162,93 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6e97eae-8c5a-4516-80f7-be623d98ce87",
+   "cell_type": "markdown",
+   "id": "05feb21e-f05f-47df-9d6f-ebb8ae1b6233",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Tomo hiperparametros"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "1d3ac271-38a3-4f04-8edf-bbe5e4dcdca1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'num_iterations'</li><li>'learning_rate'</li><li>'feature_fraction'</li><li>'num_leaves'</li><li>'min_data_in_leaf'</li><li>'y'</li><li>'dob'</li><li>'eol'</li><li>'error.message'</li><li>'exec.time'</li><li>'ei'</li><li>'error.model'</li><li>'train.time'</li><li>'prop.type'</li><li>'propose.time'</li><li>'se'</li><li>'mean'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'num\\_iterations'\n",
+       "\\item 'learning\\_rate'\n",
+       "\\item 'feature\\_fraction'\n",
+       "\\item 'num\\_leaves'\n",
+       "\\item 'min\\_data\\_in\\_leaf'\n",
+       "\\item 'y'\n",
+       "\\item 'dob'\n",
+       "\\item 'eol'\n",
+       "\\item 'error.message'\n",
+       "\\item 'exec.time'\n",
+       "\\item 'ei'\n",
+       "\\item 'error.model'\n",
+       "\\item 'train.time'\n",
+       "\\item 'prop.type'\n",
+       "\\item 'propose.time'\n",
+       "\\item 'se'\n",
+       "\\item 'mean'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'num_iterations'\n",
+       "2. 'learning_rate'\n",
+       "3. 'feature_fraction'\n",
+       "4. 'num_leaves'\n",
+       "5. 'min_data_in_leaf'\n",
+       "6. 'y'\n",
+       "7. 'dob'\n",
+       "8. 'eol'\n",
+       "9. 'error.message'\n",
+       "10. 'exec.time'\n",
+       "11. 'ei'\n",
+       "12. 'error.model'\n",
+       "13. 'train.time'\n",
+       "14. 'prop.type'\n",
+       "15. 'propose.time'\n",
+       "16. 'se'\n",
+       "17. 'mean'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       " [1] \"num_iterations\"   \"learning_rate\"    \"feature_fraction\" \"num_leaves\"      \n",
+       " [5] \"min_data_in_leaf\" \"y\"                \"dob\"              \"eol\"             \n",
+       " [9] \"error.message\"    \"exec.time\"        \"ei\"               \"error.model\"     \n",
+       "[13] \"train.time\"       \"prop.type\"        \"propose.time\"     \"se\"              \n",
+       "[17] \"mean\"            "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   num_iterations learning_rate feature_fraction num_leaves min_data_in_leaf\n",
+      "            <int>         <num>            <num>      <int>            <int>\n",
+      "1:           1375     0.0101999        0.2633874        575              325\n",
+      "[1] 0.92906\n"
+     ]
+    }
+   ],
    "source": [
     "kbayesiana <- \"bayesiana.RDATA\"  # tu archivo con el opt.state adentro\n",
     "# Cargar el archivo (esto mete en memoria los objetos guardados, p. ej. opt.state)\n",
@@ -165,9 +295,428 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bfb35472-7fb0-4e8f-8b8c-bd304658ac26",
+   "metadata": {},
+   "source": [
+    "# Final train"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85ecdeac-e91b-40ab-b79b-7d7ad776829a",
+   "id": "a331b89f-034c-4827-bde2-0623cda027f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Dataset para el final train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d8f17ea4-61a2-4329-b122-57a00e1e89d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "setwd(\"/content/buckets/b1/exp\")\n",
+    "experimento <- paste0(\"exp\", PARAM$experimento)\n",
+    "dir.create(experimento, showWarnings= FALSE)\n",
+    "setwd( paste0(\"/content/buckets/b1/exp/\", experimento ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "673cb5a9-e1b2-4b27-8a19-f4deab38954f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.table: 3 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>clase_ternaria</th><th scope=col>N</th></tr>\n",
+       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>CONTINUA</td><td>642824</td></tr>\n",
+       "\t<tr><td>BAJA+2  </td><td>  3938</td></tr>\n",
+       "\t<tr><td>BAJA+1  </td><td>  3447</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.table: 3 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " clase\\_ternaria & N\\\\\n",
+       " <fct> & <int>\\\\\n",
+       "\\hline\n",
+       "\t CONTINUA & 642824\\\\\n",
+       "\t BAJA+2   &   3938\\\\\n",
+       "\t BAJA+1   &   3447\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.table: 3 × 2\n",
+       "\n",
+       "| clase_ternaria &lt;fct&gt; | N &lt;int&gt; |\n",
+       "|---|---|\n",
+       "| CONTINUA | 642824 |\n",
+       "| BAJA+2   |   3938 |\n",
+       "| BAJA+1   |   3447 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  clase_ternaria N     \n",
+       "1 CONTINUA       642824\n",
+       "2 BAJA+2           3938\n",
+       "3 BAJA+1           3447"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# clase01\n",
+    "dataset[, clase01 := ifelse(clase_ternaria %in% c(\"BAJA+1\", \"BAJA+2\"), 1L, 0L)]\n",
+    "\n",
+    "dataset_train <- dataset[foto_mes %in% PARAM$train_final]\n",
+    "dataset_train[,.N,clase_ternaria]\n",
+    "\n",
+    "campos_buenos <- setdiff(\n",
+    "  colnames(dataset_train),\n",
+    "  c(\"clase_ternaria\", \"clase01\", \"azar\", \"training\")\n",
+    ")\n",
+    "\n",
+    "# dejo los datos en el formato que necesita LightGBM\n",
+    "\n",
+    "dtrain_final <- lgb.Dataset(\n",
+    "  data= data.matrix(dataset_train[, campos_buenos, with= FALSE]),\n",
+    "  label= dataset_train[, clase01]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27824d69-05f6-489a-9621-1830df920bb9",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## Hiperparametros para el final train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "3d86230e-fd3d-4108-a868-ef0393116cfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<dl>\n",
+       "\t<dt>$boosting</dt>\n",
+       "\t\t<dd>'gbdt'</dd>\n",
+       "\t<dt>$objective</dt>\n",
+       "\t\t<dd>'binary'</dd>\n",
+       "\t<dt>$metric</dt>\n",
+       "\t\t<dd>'auc'</dd>\n",
+       "\t<dt>$first_metric_only</dt>\n",
+       "\t\t<dd>FALSE</dd>\n",
+       "\t<dt>$boost_from_average</dt>\n",
+       "\t\t<dd>TRUE</dd>\n",
+       "\t<dt>$feature_pre_filter</dt>\n",
+       "\t\t<dd>FALSE</dd>\n",
+       "\t<dt>$force_row_wise</dt>\n",
+       "\t\t<dd>TRUE</dd>\n",
+       "\t<dt>$verbosity</dt>\n",
+       "\t\t<dd>-100</dd>\n",
+       "\t<dt>$seed</dt>\n",
+       "\t\t<dd>100271</dd>\n",
+       "\t<dt>$max_depth</dt>\n",
+       "\t\t<dd>-1</dd>\n",
+       "\t<dt>$min_gain_to_split</dt>\n",
+       "\t\t<dd>0</dd>\n",
+       "\t<dt>$min_sum_hessian_in_leaf</dt>\n",
+       "\t\t<dd>0.001</dd>\n",
+       "\t<dt>$lambda_l1</dt>\n",
+       "\t\t<dd>0</dd>\n",
+       "\t<dt>$lambda_l2</dt>\n",
+       "\t\t<dd>0</dd>\n",
+       "\t<dt>$max_bin</dt>\n",
+       "\t\t<dd>31</dd>\n",
+       "\t<dt>$bagging_fraction</dt>\n",
+       "\t\t<dd>1</dd>\n",
+       "\t<dt>$pos_bagging_fraction</dt>\n",
+       "\t\t<dd>1</dd>\n",
+       "\t<dt>$neg_bagging_fraction</dt>\n",
+       "\t\t<dd>1</dd>\n",
+       "\t<dt>$is_unbalance</dt>\n",
+       "\t\t<dd>FALSE</dd>\n",
+       "\t<dt>$scale_pos_weight</dt>\n",
+       "\t\t<dd>1</dd>\n",
+       "\t<dt>$drop_rate</dt>\n",
+       "\t\t<dd>0.1</dd>\n",
+       "\t<dt>$max_drop</dt>\n",
+       "\t\t<dd>50</dd>\n",
+       "\t<dt>$skip_drop</dt>\n",
+       "\t\t<dd>0.5</dd>\n",
+       "\t<dt>$extra_trees</dt>\n",
+       "\t\t<dd>FALSE</dd>\n",
+       "\t<dt>$num_iterations</dt>\n",
+       "\t\t<dd>1375</dd>\n",
+       "\t<dt>$learning_rate</dt>\n",
+       "\t\t<dd>0.0101999041259851</dd>\n",
+       "\t<dt>$feature_fraction</dt>\n",
+       "\t\t<dd>0.263387441785466</dd>\n",
+       "\t<dt>$num_leaves</dt>\n",
+       "\t\t<dd>575</dd>\n",
+       "\t<dt>$min_data_in_leaf</dt>\n",
+       "\t\t<dd>325</dd>\n",
+       "</dl>\n"
+      ],
+      "text/latex": [
+       "\\begin{description}\n",
+       "\\item[\\$boosting] 'gbdt'\n",
+       "\\item[\\$objective] 'binary'\n",
+       "\\item[\\$metric] 'auc'\n",
+       "\\item[\\$first\\_metric\\_only] FALSE\n",
+       "\\item[\\$boost\\_from\\_average] TRUE\n",
+       "\\item[\\$feature\\_pre\\_filter] FALSE\n",
+       "\\item[\\$force\\_row\\_wise] TRUE\n",
+       "\\item[\\$verbosity] -100\n",
+       "\\item[\\$seed] 100271\n",
+       "\\item[\\$max\\_depth] -1\n",
+       "\\item[\\$min\\_gain\\_to\\_split] 0\n",
+       "\\item[\\$min\\_sum\\_hessian\\_in\\_leaf] 0.001\n",
+       "\\item[\\$lambda\\_l1] 0\n",
+       "\\item[\\$lambda\\_l2] 0\n",
+       "\\item[\\$max\\_bin] 31\n",
+       "\\item[\\$bagging\\_fraction] 1\n",
+       "\\item[\\$pos\\_bagging\\_fraction] 1\n",
+       "\\item[\\$neg\\_bagging\\_fraction] 1\n",
+       "\\item[\\$is\\_unbalance] FALSE\n",
+       "\\item[\\$scale\\_pos\\_weight] 1\n",
+       "\\item[\\$drop\\_rate] 0.1\n",
+       "\\item[\\$max\\_drop] 50\n",
+       "\\item[\\$skip\\_drop] 0.5\n",
+       "\\item[\\$extra\\_trees] FALSE\n",
+       "\\item[\\$num\\_iterations] 1375\n",
+       "\\item[\\$learning\\_rate] 0.0101999041259851\n",
+       "\\item[\\$feature\\_fraction] 0.263387441785466\n",
+       "\\item[\\$num\\_leaves] 575\n",
+       "\\item[\\$min\\_data\\_in\\_leaf] 325\n",
+       "\\end{description}\n"
+      ],
+      "text/markdown": [
+       "$boosting\n",
+       ":   'gbdt'\n",
+       "$objective\n",
+       ":   'binary'\n",
+       "$metric\n",
+       ":   'auc'\n",
+       "$first_metric_only\n",
+       ":   FALSE\n",
+       "$boost_from_average\n",
+       ":   TRUE\n",
+       "$feature_pre_filter\n",
+       ":   FALSE\n",
+       "$force_row_wise\n",
+       ":   TRUE\n",
+       "$verbosity\n",
+       ":   -100\n",
+       "$seed\n",
+       ":   100271\n",
+       "$max_depth\n",
+       ":   -1\n",
+       "$min_gain_to_split\n",
+       ":   0\n",
+       "$min_sum_hessian_in_leaf\n",
+       ":   0.001\n",
+       "$lambda_l1\n",
+       ":   0\n",
+       "$lambda_l2\n",
+       ":   0\n",
+       "$max_bin\n",
+       ":   31\n",
+       "$bagging_fraction\n",
+       ":   1\n",
+       "$pos_bagging_fraction\n",
+       ":   1\n",
+       "$neg_bagging_fraction\n",
+       ":   1\n",
+       "$is_unbalance\n",
+       ":   FALSE\n",
+       "$scale_pos_weight\n",
+       ":   1\n",
+       "$drop_rate\n",
+       ":   0.1\n",
+       "$max_drop\n",
+       ":   50\n",
+       "$skip_drop\n",
+       ":   0.5\n",
+       "$extra_trees\n",
+       ":   FALSE\n",
+       "$num_iterations\n",
+       ":   1375\n",
+       "$learning_rate\n",
+       ":   0.0101999041259851\n",
+       "$feature_fraction\n",
+       ":   0.263387441785466\n",
+       "$num_leaves\n",
+       ":   575\n",
+       "$min_data_in_leaf\n",
+       ":   325\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "$boosting\n",
+       "[1] \"gbdt\"\n",
+       "\n",
+       "$objective\n",
+       "[1] \"binary\"\n",
+       "\n",
+       "$metric\n",
+       "[1] \"auc\"\n",
+       "\n",
+       "$first_metric_only\n",
+       "[1] FALSE\n",
+       "\n",
+       "$boost_from_average\n",
+       "[1] TRUE\n",
+       "\n",
+       "$feature_pre_filter\n",
+       "[1] FALSE\n",
+       "\n",
+       "$force_row_wise\n",
+       "[1] TRUE\n",
+       "\n",
+       "$verbosity\n",
+       "[1] -100\n",
+       "\n",
+       "$seed\n",
+       "[1] 100271\n",
+       "\n",
+       "$max_depth\n",
+       "[1] -1\n",
+       "\n",
+       "$min_gain_to_split\n",
+       "[1] 0\n",
+       "\n",
+       "$min_sum_hessian_in_leaf\n",
+       "[1] 0.001\n",
+       "\n",
+       "$lambda_l1\n",
+       "[1] 0\n",
+       "\n",
+       "$lambda_l2\n",
+       "[1] 0\n",
+       "\n",
+       "$max_bin\n",
+       "[1] 31\n",
+       "\n",
+       "$bagging_fraction\n",
+       "[1] 1\n",
+       "\n",
+       "$pos_bagging_fraction\n",
+       "[1] 1\n",
+       "\n",
+       "$neg_bagging_fraction\n",
+       "[1] 1\n",
+       "\n",
+       "$is_unbalance\n",
+       "[1] FALSE\n",
+       "\n",
+       "$scale_pos_weight\n",
+       "[1] 1\n",
+       "\n",
+       "$drop_rate\n",
+       "[1] 0.1\n",
+       "\n",
+       "$max_drop\n",
+       "[1] 50\n",
+       "\n",
+       "$skip_drop\n",
+       "[1] 0.5\n",
+       "\n",
+       "$extra_trees\n",
+       "[1] FALSE\n",
+       "\n",
+       "$num_iterations\n",
+       "[1] 1375\n",
+       "\n",
+       "$learning_rate\n",
+       "[1] 0.0101999\n",
+       "\n",
+       "$feature_fraction\n",
+       "[1] 0.2633874\n",
+       "\n",
+       "$num_leaves\n",
+       "[1] 575\n",
+       "\n",
+       "$min_data_in_leaf\n",
+       "[1] 325\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "param_final <- modifyList(PARAM$lgbm$param_fijos,\n",
+    "  PARAM$out$lgbm$mejores_hiperparametros)\n",
+    "\n",
+    "param_final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "56f4f2c9-78cb-4fa5-9116-a881cec350ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# este punto es muy SUTIL  y será revisado en la Clase 05\n",
+    "\n",
+    "param_normalizado <- copy(param_final)\n",
+    "param_normalizado$min_data_in_leaf <-  round(param_final$min_data_in_leaf / PARAM$trainingstrategy$undersampling)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05c75537-84b8-44a6-9eb9-9f705c9b3c73",
+   "metadata": {},
+   "source": [
+    "# Training de modelos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15be877c-722d-4576-8427-c50666f00e4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Entrenamiento y guardado\n",
+    "modelos_guardados <- train_and_save_models(\n",
+    "  dtrain = dtrain_final,\n",
+    "  params = param_normalizado,\n",
+    "  nrounds = 1375,\n",
+    "  seeds = SEEDS,\n",
+    "  tag = \"5001_us03_lag1\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a862cf31-5a2d-410f-80ed-8b6228308db4",
    "metadata": {},
    "outputs": [],
    "source": []
