chore: push para prueba exigir CPUS

--- a/src/competencia/experimento/train.ipynb
+++ b/src/competencia/experimento/train.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "id": "30958176-d114-4d55-be59-bf5d44a41923",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "id": "76e912d0-da53-499c-8e1e-d45964ba0f1c",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "id": "0b821dd1-2be4-46e9-bf3f-8f60f486660a",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "id": "1d3ac271-38a3-4f04-8edf-bbe5e4dcdca1",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "id": "d8f17ea4-61a2-4329-b122-57a00e1e89d3",
    "metadata": {},
    "outputs": [],
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "id": "673cb5a9-e1b2-4b27-8a19-f4deab38954f",
    "metadata": {},
    "outputs": [
@@ -403,16 +403,14 @@
   {
    "cell_type": "markdown",
    "id": "27824d69-05f6-489a-9621-1830df920bb9",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Hiperparametros para el final train"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "id": "3d86230e-fd3d-4108-a868-ef0393116cfc",
    "metadata": {},
    "outputs": [
@@ -677,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "id": "56f4f2c9-78cb-4fa5-9116-a881cec350ca",
    "metadata": {},
    "outputs": [],
@@ -701,16 +699,29 @@
    "execution_count": null,
    "id": "15be877c-722d-4576-8427-c50666f00e4a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ">> Lanzando 2 workers; 4 hilos LGBM por worker\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Entrenamiento y guardado\n",
-    "modelos_guardados <- train_and_save_models(\n",
-    "  dtrain = dtrain_final,\n",
-    "  params = param_normalizado,\n",
+    "result <- entrenar_modelos_paralelos(\n",
+    "  dtrain  = dtrain_final,\n",
+    "  params  = param_normalizado,  # tus hparams (sin num_threads)\n",
     "  nrounds = 1375,\n",
-    "  seeds = SEEDS,\n",
-    "  tag = \"5001_us03_lag1\"\n",
-    ")"
+    "  seeds   = SEEDS,              # tus 10 semillas\n",
+    "  tag     = \"5001_us03_lag1\",\n",
+    "  workers = 2,                  # 2 procesos\n",
+    "  threads_per_worker = 4        # 4 hilos por proceso -> 8 hilos totales\n",
+    ")\n",
+    "\n",
+    "# paths de modelos guardados:\n",
+    "sapply(result, function(x) x$path)\n"
    ]
   },
   {
