fix: ajusto entrnar modelos

--- a/src/competencia/experimento/setup.ipynb
+++ b/src/competencia/experimento/setup.ipynb
@@ -58,6 +58,43 @@
     "setorder( dataset, foto_mes, clase_ternaria, numero_de_cliente)\n",
     "dataset[, .N, list(foto_mes, clase_ternaria)]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ba1b410a-4b22-48b1-bd2c-1e973889fdbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "4067"
+      ],
+      "text/latex": [
+       "4067"
+      ],
+      "text/markdown": [
+       "4067"
+      ],
+      "text/plain": [
+       "[1] 4067"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Sys.getpid()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ad19a3c-6079-4009-92b5-e10c04a6c334",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
