--- a/src/competencia/experimento/train.ipynb
+++ b/src/competencia/experimento/train.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "id": "30958176-d114-4d55-be59-bf5d44a41923",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "id": "76e912d0-da53-499c-8e1e-d45964ba0f1c",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 51,
    "id": "0b821dd1-2be4-46e9-bf3f-8f60f486660a",
    "metadata": {},
    "outputs": [],
@@ -398,6 +398,29 @@
     "  data= data.matrix(dataset_train[, campos_buenos, with= FALSE]),\n",
     "  label= dataset_train[, clase01]\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "004ef2d2-031e-4a64-bd50-eebae0ce51bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# clase01\n",
+    "dataset[, clase01 := ifelse(clase_ternaria %in% c(\"BAJA+1\", \"BAJA+2\"), 1L, 0L)]\n",
+    "\n",
+    "dataset_train <- dataset[ foto_mes %in% PARAM$train_final ]\n",
+    "campos_buenos <- setdiff(colnames(dataset_train), c(\"clase_ternaria\",\"clase01\",\"azar\",\"training\"))\n",
+    "\n",
+    "# Dataset de LightGBM con max_bin=31\n",
+    "dtrain_final <- lgb.Dataset(\n",
+    "  data  = data.matrix(dataset_train[, ..campos_buenos]),\n",
+    "  label = dataset_train$clase01,\n",
+    "  params = list(max_bin = 31),     # <<--- cambio mínimo\n",
+    "  free_raw_data = FALSE\n",
+    ")\n",
+    "lgb.Dataset.construct(dtrain_final) # (una vez)\n"
    ]
   },
   {
@@ -675,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 53,
    "id": "56f4f2c9-78cb-4fa5-9116-a881cec350ca",
    "metadata": {},
    "outputs": [],
@@ -683,7 +706,24 @@
     "# este punto es muy SUTIL  y será revisado en la Clase 05\n",
     "\n",
     "param_normalizado <- copy(param_final)\n",
-    "param_normalizado$min_data_in_leaf <-  round(param_final$min_data_in_leaf / PARAM$trainingstrategy$undersampling)"
+    "param_normalizado$min_data_in_leaf <-  round(param_final$min_data_in_leaf / PARAM$trainingstrategy$undersampling)\n",
+    "param_normalizado$num_threads <- 8  # no optimizable, solo controla CPU\n",
+    "param_normalizado$max_bin <- NULL         # <<--- clave para no re-definirlo en lgb.train()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf966af5-86c1-435d-b303-170990849e84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# entreno LightGBM\n",
+    "\n",
+    "modelo_final <- lgb.train(\n",
+    "  data= dtrain_final,\n",
+    "  param= param_normalizado\n",
+    ")"
    ]
   },
   {
@@ -699,27 +739,15 @@
    "execution_count": null,
    "id": "15be877c-722d-4576-8427-c50666f00e4a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ">> Lanzando 2 workers; 4 hilos LGBM por worker\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "result <- entrenar_modelos_paralelos(\n",
+    "result <- entrenar_modelos(\n",
     "  dtrain  = dtrain_final,\n",
-    "  params  = param_normalizado,  # tus hparams (sin num_threads)\n",
+    "  params  = param_normalizado,\n",
     "  nrounds = 1375,\n",
-    "  seeds   = SEEDS,              # tus 10 semillas\n",
-    "  tag     = \"5001_us03_lag1\",\n",
-    "  workers = 2,                  # 2 procesos\n",
-    "  threads_per_worker = 4        # 4 hilos por proceso -> 8 hilos totales\n",
+    "  seeds   = SEEDS,\n",
+    "  tag     = \"5001_us03_lag1\"\n",
     ")\n",
-    "\n",
     "# paths de modelos guardados:\n",
     "sapply(result, function(x) x$path)\n"
    ]
@@ -727,7 +755,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a862cf31-5a2d-410f-80ed-8b6228308db4",
+   "id": "d59335bb-1a40-4a93-bb41-10ff3fb6f3d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2️⃣ Llamar a la función\n",
+    "resultados <- entrenar_modelos_paralelos(\n",
+    "  dtrain  = dtrain_final,            # Dataset de LightGBM\n",
+    "  params  = param_train,             # tus hiperparámetros\n",
+    "  nrounds = 1375,                    # número de iteraciones\n",
+    "  seeds   = SEEDS,                   # vector de semillas\n",
+    "  tag     = \"5001_us03_lag1_paralell\"         # nombre del experimento\n",
+    ")\n",
+    "\n",
+    "# 3️⃣ Ver qué modelos se guardaron\n",
+    "sapply(resultados, function(x) x$path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0273e971-1c83-4581-85db-3bbfbe6fcafd",
    "metadata": {},
    "outputs": [],
    "source": []
